# mcp_py_exam

./: .env  README.md  client.py  client_geni.py  pyproject.toml  server.py  server2.py
LMStudio-MCP/: lmstudio_bridge.py  main.py  pyproject.toml
gemini_cli_mcp/: .env  main.py  mcp_client.py  mcp_server.py  mcp_server2.py  pyproject.toml
gemini_cli_mcp/src/fastmcp/: mcp_client3.py  mcp_server3.py
gemini_cli_mcp/src/subprocess/: mcp_client.py  mcp_server.py
langgraph-react-mcp-chat/: requirements.txt
langgraph-react-mcp-chat/src/: mcp_client.py
ollama-mcp-client/: agent.py
python-mcp-server/: pyproject.toml
python-mcp-server/src/client/: client_geni.py  client_ollama2.py  client_ollama3.py
python-mcp-server/src/client/ollama/: ollama_toolmanager.py
python-mcp-server/src/exam1/: client1.py  client2.py  server1.py  server2.py
python-mcp-server/src/server/: client.py  test_mcp.py  wheather_mcp_server.py
python-mcp-server/test/: client_geniTest.py
src/client/: client_anthropic.py  client_geni.py  client_ollama.py  mcp_client.py
src/client/ollama/: mcpclient.py
